# ai-applications

./: .env.sample  .gitignore  pyproject.toml
project_apartment_prediction/: .markdownlint.json  README.md  app.py  model_training.ipynb  requirements.txt
week1/: apartment_regression_price_prediction.ipynb
week2/: apartments_data_enriched_with_new_features.csv  data_with_large_residuals.csv  feature_engineering.ipynb
week3/apartment/: apartment.ipynb  readme.md
week3/iris/: app.py  iris.ipynb  iris_random_forest_classifier.pkl
week4/: apartment_regression_price_prediction.ipynb
week6/: transfer_learning_image_classification.ipynb
week7/: oxford_pets_zero_shot.ipynb
week7/gradio-oxford-pet-app/: app.py  readme.md
week8/features_from_image/: extract_feature_from_image.ipynb
week8/soccer_action_classification/: gpt4.ipynb  xclip.ipynb
week8/transferlearning_with_custom_data/: transfer_learning_image_classification_custom_dataset.ipynb
