[project]
name = "ai-applications-fs25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "matplotlib>=3.9.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.1",
    "jupyter>=1.0.0",
    "jupyterlab>=4.3.3",
    "ipykernel>=6.29.5",
    "tensorflow-macos>=2.11.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.49.0",
    "pillow>=11.0.0",
    "fastapi>=0.115.11",
    "uvicorn>=0.34.0",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
]
